--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,9 +1,6 @@
-version: '3.8'
-
 services:
   ambev.developerevaluation.webapi:
     container_name: ambev_developer_evaluation_webapi
-    image: ${DOCKER_REGISTRY-}ambevdeveloperevaluationwebapi
     build:
       context: .
       dockerfile: src/Ambev.DeveloperEvaluation.WebApi/Dockerfile
@@ -11,6 +8,9 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/home/app/.aspnet/https/localhost.pfx
+      - ASPNETCORE_Kestrel__Certificates__Default__Password=test@1234
+      - ConnectionStrings__DefaultConnection=Host=ambev_developer_evaluation_database;Port=5432;Database=developer_evaluation;Username=developer;Password=ev@luAt10n
     ports:
       - "8080"
       - "8081"
@@ -21,7 +21,6 @@ services:
   ambev.developerevaluation.database:
     container_name: ambev_developer_evaluation_database
     image: postgres:13
-
     environment:
       POSTGRES_DB: developer_evaluation
       POSTGRES_USER: developer
@@ -29,6 +28,8 @@ services:
     ports:
       - "5432"
     restart: unless-stopped
+    volumes:
+        - ./initdb.sql:/docker-entrypoint-initdb.d/migrations.sql
 
   ambev.developerevaluation.nosql:
     container_name: ambev_developer_evaluation_nosql 
